get example of content-based recommendations working

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="css/navbar.css">
-<div id="navbar">
+<div id="navbar" class="shadow">
+	<div>
+		<img src="/img/logo_large.png">
+	</div>
 </div>
 
 <script src="js/navbar.js"></script>
