--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,13 +2,50 @@ html, body{
 	margin: 0;
 	height: 100%;
 	width: 100%;
+    font-family: 'Roboto';
 }
 
 #main{
 	width: 100%;
 	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .shadow{
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+#body{
+	flex: 1;
+    background-color: #eee;
+    height: calc(100% - 80px);
+    overflow: scroll;
+    display: flex;
+    justify-content: center;
+}
+
+#content{
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#content > div{
+    position: relative;
+    width: calc(100% - 40px);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.btn{
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: #f44336;
+    border: none;
+    font-size: 14px;
+    border-radius: 2px;
+    color: white;
+    font-weight: bold;
 }
