--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     background-color: #F44336;
-    width: 100%
+    width: 100%;
 }
 
 #navbar > div{
