--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,11 @@
 	<button class="btn shadow" onclick="predictContent()">PREDICT</button>
 </div>
 
-<div class="shadow container" id="predicted-courses" style="display:none">
+<div class="shadow container" id="predicted-container" style="display:none">
+	<h2 class="center">Recommended For You</h2>
+	<div id="predicted-courses">
+		
+	</div>
 </div>
 
 
