--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,6 +3,8 @@
 	<div>
 		<img src="/img/logo_large.png">
 	</div>
+	<a href="/"><span>HOME</span></a>
+	<a href="/about"><span>ABOUT</span></a>
 </div>
 
 <script src="js/navbar.js"></script>
