--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,3 +49,12 @@ html, body{
     color: white;
     font-weight: bold;
 }
+
+h2{
+    font-size: 18px;
+    margin-top: 0px;
+}
+
+.center{
+    text-align: center;
+}
