--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,11 +13,17 @@
 .container .row{
 	width: calc(100% - 20px);
 	padding: 10px;
+	border-bottom: solid 1px #eee;
+}
+
+.container .row:last-child{
+	border-bottom: none;
 }
 
 .courses{
 	display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .courses p{
@@ -33,6 +39,11 @@
 	color: #212121;
 }
 
+.courses a{
+	color: #212121 !important;
+}
+
+
 .courses .star-selected{
 	color: #FFEB3B;
 }
@@ -40,4 +51,17 @@
 .course-close{
 	margin-left: 10px;
     color: #afafaf;
+}
+
+.courses-rec-desc{
+	width: calc(100%  - 20px);
+	padding: 10px;
+	margin-top: 10px;
+	font-size: 12px;
+}
+
+.courses-coursetitle{
+	margin-left: 6px;
+    font-size: 15px;
+    color: #636363;
 }
