--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -6,15 +6,23 @@
     width: 100%;
 }
 
-#navbar > div{
+#navbar > *{
 	position: relative;
 	height: 40px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 10px;
+	padding-right: 10px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
 
 #navbar img{
 	height: 100%;
+}
+
+#navbar > a{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	text-decoration: none;
 }
