--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MIT CourseRecommender</title>
+		<title>MIT Course Recommender</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,9 +11,9 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-		<!--link rel="icon" type="image/png" href="img/logo.png"-->
+		<link rel="icon" type="image/png" href="/img/logo.png">
 		<meta name="description" content="">
-		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="/css/base.css">
 		
 		{% block header %}{% endblock %}
 	</head>
@@ -26,6 +26,6 @@
 				</div>
 			</div>
 		</div>
-		<script src="js/base.js"></script>
+		<script src="/js/base.js"></script>
 	</body>
 </html>
