add both content and collab

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,12 @@
 
 <div class="shadow container" id="predicted-container" style="display:none">
 	<h2 class="center">Recommended For You</h2>
-	<div id="predicted-courses">
+	<div id="predicted-courses-content">
 		
+	</div>
+	<h2 class="center">Similar Students Also Liked</h2>
+	<div id="predicted-courses-collab">
+
 	</div>
 </div>
 
