--- a/templates/about.html
+++ b/templates/about.html
@@ -16,8 +16,12 @@
 	<h2 class="center">TEAM</h2>
 	<div id="team-members">
 		<div>
-			<img src="https://avatars1.githubusercontent.com/u/4978455?v=3&s=466">
+			<img src="https://avatars1.githubusercontent.com/u/4978455?v=3&s=466" class="shadow">
 			<span>Michael Kaminsky</span>
+			<span>
+				<a href="https://github.com/mkaminsky11" target="_blank"><i class="fa fa-github"></i></a>
+				<a href="https://mkaminsky11.github.io" target="_blank"><i class="fa fa-link"></i></a>
+			</span>
 		</div>
 	</div>
 </div>
