--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,27 +1,38 @@
-#team-members{
-	display: flex;
-	flex-wrap: wrap;
+html, body{
+	margin: 0;
+	height: 100%;
+	width: 100%;
+    font-family: 'Roboto';
 }
 
-#team-members > div{
-	width: 200px;
+#scroll{
 	display: flex;
-	align-items: center;
-	justify-content: center;
 	flex-direction: column;
 }
 
-#team-members > div > img{
-	width: 100px;
-	border-radius: 50%;
+.part{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
 }
 
-#team-members > div > span{
-	margin-top: 10px;
+#part-1{
+
 }
 
-#team-members span a {
-    margin: 5px;
-    color: black;
-    font-size: 19px;
+#part-1 svg{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #C62828;
+}
+
+#part-1 > div{
+	position: absolute;
+	z-index: 2;
+	color: white;
 }
