--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,16 @@
 <link rel="stylesheet" href="css/navbar.css">
-<div id="navbar" class="shadow">
+<div id="navbar">
 	<div>
 		<img src="/img/logo_large.png">
 	</div>
 	<a href="/"><span>HOME</span></a>
-	<a href="/about"><span>ABOUT</span></a>
+	<a href="/recommend"><span>RECOMMENDATIONS</span></a>
+	<span style="flex:1"></span>
+	<a href="https://github.com/mens-et-manus/course-recommendations" id="github" target="_blank">
+		<span>
+			<i class="fa fa-github"></i> GITHUB
+		</span>
+	</a>
 </div>
 
 <script src="js/navbar.js"></script>
