--- a/static/css/about.css
+++ b/static/css/about.css
@@ -16,6 +16,12 @@ html, body{
 	justify-content: center;
 	align-items: center;
 	position: relative;
+	flex-direction: column;
+}
+
+.part:not(.picture-part){
+	padding: 20px;
+	width: calc(100% - 40px);
 }
 
 #part-1{
@@ -46,4 +52,71 @@ html, body{
 	color: #4a4343;
     font-size: 23px;
     margin-top: 10px;
+}
+
+#team-members{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#team-members > div{
+	width: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+#team-members > div > img{
+	width: 100px;
+	border-radius: 50%;
+}
+
+#team-members > div > span{
+	margin-top: 10px;
+}
+
+#part-3{
+	background-image: url('http://www.veritas.org/wp-content/uploads/2013/09/MIT-campus.jpg');
+	background-size: cover;
+	height: 300px;
+	background-position: center;
+	background-attachment: fixed;
+}
+
+.overlay{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.3);
+}
+
+.fa-star{
+	color: #212121;
+}
+
+.star-selected{
+	color: #FFEB3B;
+}
+
+.info{
+	text-align: center;
+}
+
+.info-num{
+    color: #8e8c8c;
+}
+
+.shadow{
+   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+#how{
+	width: 100%;
+    max-width: 600px;
+    margin-top: 20px;
+    border-bottom: solid 1px #eee;
+    padding-bottom: 25px;
 }
