--- a/static/css/base.css
+++ b/static/css/base.css
@@ -59,3 +59,8 @@ h2{
 .center{
     text-align: center;
 }
+
+
+.shadow{
+   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
