--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,9 +1,11 @@
 #navbar{
-    height: 60px;
+    min-height: 60px;
     display: flex;
     flex-direction: row;
     background-color: #F44336;
     width: 100%;
+    flex-wrap: wrap;
+    z-index: 3;
 }
 
 #navbar > *{
@@ -25,4 +27,10 @@
 	align-items: center;
 	color: white;
 	text-decoration: none;
+}
+
+#github > span{
+	padding: 5px;
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 3px;
 }
