--- a/templates/bare.html
+++ b/templates/bare.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="icon" type="image/png" href="/img/logo.png">
-		<meta name="description" content="">
+		<meta name="description" content="Empowering students through personalized recommendations">
 		
 		{% block header %}{% endblock %}
 	</head>
