add course evaluation integration, TODO: graphs

--- a/templates/about.html
+++ b/templates/about.html
@@ -37,6 +37,10 @@
 			<span id="stats-max_predicted_num_id">N/A</span>
 			<span id="stats-max_predicted_num" class="info-num">N/A</span>
 		</h2>
+		<h2 class="info">COURSE EVALUATIONS PARSED
+			<br/>
+			<span id="stats-evals" class="info-num">N/A</span>
+		</h2>
 	</div>
 	<div class="part picture-part shadow" id="part-3">
 		<div class="overlay"></div>
