try to get graphs

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 {% block header %}
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/autofill.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -31,5 +33,6 @@
 
 <script src="js/autofill.js"></script>
 <script src="js/index.js"></script>
+<script src="js/charts.js"></script>
 
 {% endblock %}
